hacky way to make GUI work (grave overview) possible NullPointerException?